Modify and addapt to new colors

--- a/app/sass/variables.sass
+++ b/app/sass/variables.sass
@@ -1,8 +1,7 @@
 // Backgrounds
-$bg-color-base: #FFF
-$bg-color-dark: #121212
-$bg-color-active: #F3F3F3
-$bg-color-disabled: #898989
+$bg-color-primary: #E5E5E5
+$bg-color-secondary: #FFF
+$bg-color-secondary: #333
 
 // Fonts
 $font-color-primary: #121212
