--- a/app/sass/globals.sass
+++ b/app/sass/globals.sass
@@ -15,7 +15,7 @@ body
   width: 100vw
   display: flex
   justify-content: center
-  background-color: $bg-color-base
+  background-color: $bg-color-primary
   font-family: 'Roboto Regular'
 
 h1
