--- a/app/sass/variables.sass
+++ b/app/sass/variables.sass
@@ -1,7 +1,7 @@
 // Backgrounds
 $bg-color-primary: #E5E5E5
 $bg-color-secondary: #FFF
-$bg-color-secondary: #333
+$bg-color-third: #333
 
 // Fonts
 $font-color-primary: #121212
