--- a/app/components/Header/header.module.sass
+++ b/app/components/Header/header.module.sass
@@ -5,17 +5,9 @@
   display: flex
   justify-content: space-between
   padding: $spacing-xl
-  color: $bg-color-base
+  color: $font-color-primary
   border-radius: $radius-md
-  background-color: $bg-color-dark
+  background-color: $bg-color-secondary
 
   @include breakpoint(mobile)
     border-radius: unset
-
-  .logoWrapper
-    width: $spacing-6xl
-    height: $spacing-6xl
-    padding: $spacing-xs
-    background-color: $bg-color-base
-    border-radius: $radius-rounded
-
