Fix spinner styles

--- a/app/components/Spinner/spinner.module.sass
+++ b/app/components/Spinner/spinner.module.sass
@@ -3,9 +3,9 @@
 .spinner
   width: 80px
   height: 80px
-  border: solid 5px rgba($bg-color-disabled, .5)
+  border: solid 5px rgba($bg-color-primary, .5)
   border-radius: 50%
-  border-left-color: $bg-color-dark
+  border-left-color: $bg-color-third
   animation: spin 1s ease infinite
 
 @keyframes spin
