Add success color

--- a/app/sass/variables.sass
+++ b/app/sass/variables.sass
@@ -7,6 +7,7 @@ $bg-color-third: #333
 $font-color-primary: #121212
 $font-color-secondary: #FFF
 $font-color-third: #444
+$font-color-success: #06d6a0 
 $font-color-danger: #C93957
 $font-color-disabled: #898989
 
