--- a/app/components/FinesList/finesList.module.sass
+++ b/app/components/FinesList/finesList.module.sass
@@ -6,3 +6,9 @@
   flex-direction: column
   align-items: center
   justify-content: center
+
+  .filterPillsWrapper
+    width: 100%
+    display: flex
+    justify-content: center
+    margin-bottom: $spacing-3xl
