--- a/app/components/Button/button.module.sass
+++ b/app/components/Button/button.module.sass
@@ -5,6 +5,7 @@
   border: solid 1px
   border-radius: $radius-md
   font-family: 'Roboto Regular'
+  min-height: 32px
 
 .primary
   color: $font-color-secondary
