--- a/app/sass/variables.sass
+++ b/app/sass/variables.sass
@@ -2,6 +2,7 @@
 $bg-color-primary: #E5E5E5
 $bg-color-secondary: #FFF
 $bg-color-third: #333
+$bg-color-fourth: #06d6a0 
 
 // Fonts
 $font-color-primary: #121212
