Improve information for the user and improve the styles

--- a/app/create-fine/createFine.module.sass
+++ b/app/create-fine/createFine.module.sass
@@ -9,7 +9,7 @@
   .labelGroup
     display: flex
     flex-direction: column
-    margin-bottom: $spacing-md
+    margin-bottom: $spacing-lg
 
     .label
       padding-left: $spacing-sm
@@ -19,6 +19,7 @@
       width: 100%
       color: $font-color-primary
       font-family: 'Roboto Regular'
+      font-size: 1.1rem
       border-radius: $radius-md
       border: solid 1px $border-color-primary
       padding: $spacing-sm $spacing-lg
